Round 15 added: wake-rider and arc-read

--- a/index.html
+++ b/index.html
@@ -153,6 +153,46 @@
 
 <div class="rounds">
 
+  <!-- ROUND 15 -->
+  <div class="round">
+    <div class="round-label">Round 15 &mdash; Feb 28, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/wake-rider/screenshot.png" alt="Wake Rider" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Wake Rider</span>
+          </div>
+          <p class="game-desc">A lone recon wedge with no engine, surviving by drafting enemy patrol ships — steal their speed or bleed to zero.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/wake-rider/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/wake-rider" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/arc-read/screenshot.png" alt="Arc Read" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Arc Read</span>
+          </div>
+          <p class="game-desc">Draw interceptor arcs to where enemies will be — predict trajectories and defend your city before it falls.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/arc-read/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/arc-read" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <!-- ROUND 14 -->
   <div class="round">
     <div class="round-label">Round 14 &mdash; Feb 27, 2026</div>
