R15: wake-rider winner badge

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Wake Rider</span>
+            <span class="winner-badge">Winner</span>
           </div>
           <p class="game-desc">A lone recon wedge with no engine, surviving by drafting enemy patrol ships — steal their speed or bleed to zero.</p>
           <div class="game-links">            <a class="link-repo" href="https://github.com/nishivector/wake-rider" target="_blank">GitHub ↗</a>
