Round 16: add tilt-crash and wire-slash

--- a/index.html
+++ b/index.html
@@ -187,6 +187,42 @@
 
 <div class="rounds">
 
+  <!-- ROUND 16 -->
+  <div class="round">
+    <div class="round-label">Round 16 &mdash; Feb 28, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <a class="game-thumb" href="https://nishivector.github.io/tilt-crash/" target="_blank">
+          <img src="https://nishivector.github.io/tilt-crash/screenshot.png" alt="Tilt Crash" />
+        </a>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Tilt Crash</span>
+          </div>
+          <p class="game-desc">Drag to tip a suspended arena and roll a heavy iron ball into enemy clusters — momentum is your weapon and your downfall.</p>
+          <div class="game-links">            <a class="link-repo" href="https://github.com/nishivector/tilt-crash" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <a class="game-thumb" href="https://nishivector.github.io/wire-slash/" target="_blank">
+          <img src="https://nishivector.github.io/wire-slash/screenshot.png" alt="Wire Slash" />
+        </a>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Wire Slash</span>
+          </div>
+          <p class="game-desc">Enemy pulses travel a wire network toward your core — slash connections to reroute them into kill nodes before they break through.</p>
+          <div class="game-links">            <a class="link-repo" href="https://github.com/nishivector/wire-slash" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <!-- ROUND 15 -->
   <div class="round">
     <div class="round-label">Round 15 &mdash; Feb 28, 2026</div>
