Round 17: add chain-snap and core-pull

--- a/index.html
+++ b/index.html
@@ -187,6 +187,42 @@
 
 <div class="rounds">
 
+  <!-- ROUND 17 -->
+  <div class="round">
+    <div class="round-label">Round 17 &mdash; Feb 28, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <a class="game-thumb" href="https://nishivector.github.io/chain-snap/" target="_blank">
+          <img src="https://nishivector.github.io/chain-snap/screenshot.png" alt="Chain Snap" />
+        </a>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Chain Snap</span>
+          </div>
+          <p class="game-desc">Drag elastic links between glowing enemy nodes past their breaking point — recoil sends clusters flying and chains reactions through the web.</p>
+          <div class="game-links">            <a class="link-repo" href="https://github.com/nishivector/chain-snap" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <a class="game-thumb" href="https://nishivector.github.io/core-pull/" target="_blank">
+          <img src="https://nishivector.github.io/core-pull/screenshot.png" alt="Core Pull" />
+        </a>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Core Pull</span>
+          </div>
+          <p class="game-desc">Hold to magnetically draw enemies toward your stellar core, then release to blast them into the arena walls at lethal velocity.</p>
+          <div class="game-links">            <a class="link-repo" href="https://github.com/nishivector/core-pull" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <!-- ROUND 16 -->
   <div class="round">
     <div class="round-label">Round 16 &mdash; Feb 28, 2026</div>
