R17: chain-snap winner badge

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Chain Snap</span>
+            <span class="winner-badge">Winner</span>
           </div>
           <p class="game-desc">Drag elastic links between glowing enemy nodes past their breaking point — recoil sends clusters flying and chains reactions through the web.</p>
           <div class="game-links">            <a class="link-repo" href="https://github.com/nishivector/chain-snap" target="_blank">GitHub ↗</a>
