--- a/index.html
+++ b/index.html
@@ -187,6 +187,47 @@
 
 <div class="rounds">
 
+  <!-- ROUND 18 -->
+  <div class="round">
+    <div class="round-label">Round 18 &mdash; Mar 01, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/salmon-run/screenshot.png" alt="Salmon Run" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Salmon Run</span>
+          </div>
+          <p class="game-desc">Gary the sockeye salmon fights upstream — tap to switch lanes, hold to leap waterfalls, dodge boulders and bears.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/salmon-run/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/salmon-run" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/balloon-drift/screenshot.png" alt="Balloon Drift" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Balloon Drift</span>
+          </div>
+          <p class="game-desc">Guide Dot, a lost red heart balloon, through suburban skies — dodge power lines, pigeons, and chimneys as the music blossoms.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/balloon-drift/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/balloon-drift" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
   <!-- ROUND 17 -->
   <div class="round">
     <div class="round-label">Round 17 &mdash; Feb 28, 2026</div>
