R18: balloon-drift winner badge, remove stray Play links

--- a/index.html
+++ b/index.html
@@ -201,9 +201,7 @@
             <span class="game-title">Salmon Run</span>
           </div>
           <p class="game-desc">Gary the sockeye salmon fights upstream — tap to switch lanes, hold to leap waterfalls, dodge boulders and bears.</p>
-          <div class="game-links">
-            <a class="link-play" href="https://nishivector.github.io/salmon-run/" target="_blank">Play</a>
-            <a class="link-repo" href="https://github.com/nishivector/salmon-run" target="_blank">GitHub ↗</a>
+          <div class="game-links">            <a class="link-repo" href="https://github.com/nishivector/salmon-run" target="_blank">GitHub ↗</a>
           </div>
         </div>
       </div>
@@ -215,11 +213,10 @@
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Balloon Drift</span>
+            <span class="winner-badge">Winner</span>
           </div>
           <p class="game-desc">Guide Dot, a lost red heart balloon, through suburban skies — dodge power lines, pigeons, and chimneys as the music blossoms.</p>
-          <div class="game-links">
-            <a class="link-play" href="https://nishivector.github.io/balloon-drift/" target="_blank">Play</a>
-            <a class="link-repo" href="https://github.com/nishivector/balloon-drift" target="_blank">GitHub ↗</a>
+          <div class="game-links">            <a class="link-repo" href="https://github.com/nishivector/balloon-drift" target="_blank">GitHub ↗</a>
           </div>
         </div>
       </div>
