R18: make salmon-run + balloon-drift thumbnails clickable

--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
     <div class="games">
 
       <div class="game">
-        <div class="game-thumb">
+        <a class="game-thumb" href="https://nishivector.github.io/salmon-run/" target="_blank">
           <img src="https://nishivector.github.io/salmon-run/screenshot.png" alt="Salmon Run" />
-        </div>
+        </a>
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Salmon Run</span>
@@ -207,9 +207,9 @@
       </div>
 
       <div class="game">
-        <div class="game-thumb">
+        <a class="game-thumb" href="https://nishivector.github.io/balloon-drift/" target="_blank">
           <img src="https://nishivector.github.io/balloon-drift/screenshot.png" alt="Balloon Drift" />
-        </div>
+        </a>
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Balloon Drift</span>
