--- a/index.html
+++ b/index.html
@@ -187,6 +187,47 @@
 
 <div class="rounds">
 
+  <!-- ROUND 19 -->
+  <div class="round">
+    <div class="round-label">Round 19 &mdash; Mar 01, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/dusty-roll/screenshot.png" alt="Dusty Roll" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Dusty Roll</span>
+          </div>
+          <p class="game-desc">Dusty the cheerful tumbleweed can't stop rolling — tap to hop over cacti, hold to tuck under trucks, survive a tornado on the Texas panhandle.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/dusty-roll/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/dusty-roll" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/blip-drift/screenshot.png" alt="Blip Drift" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Blip Drift</span>
+          </div>
+          <p class="game-desc">Guide Probe Unit 9 "Blip" home through the asteroid belt — hold left/right to fire tiny thrusters, drift on inertia, and navigate asteroid gravity to reach the signal tower.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/blip-drift/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/blip-drift" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
   <!-- ROUND 18 -->
   <div class="round">
     <div class="round-label">Round 18 &mdash; Mar 01, 2026</div>
