--- a/index.html
+++ b/index.html
@@ -193,33 +193,29 @@
     <div class="games">
 
       <div class="game">
-        <div class="game-thumb">
+        <a class="game-thumb" href="https://nishivector.github.io/dusty-roll/" target="_blank">
           <img src="https://nishivector.github.io/dusty-roll/screenshot.png" alt="Dusty Roll" />
-        </div>
+        </a>
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Dusty Roll</span>
           </div>
           <p class="game-desc">Dusty the cheerful tumbleweed can't stop rolling — tap to hop over cacti, hold to tuck under trucks, survive a tornado on the Texas panhandle.</p>
-          <div class="game-links">
-            <a class="link-play" href="https://nishivector.github.io/dusty-roll/" target="_blank">Play</a>
-            <a class="link-repo" href="https://github.com/nishivector/dusty-roll" target="_blank">GitHub ↗</a>
+          <div class="game-links">            <a class="link-repo" href="https://github.com/nishivector/dusty-roll" target="_blank">GitHub ↗</a>
           </div>
         </div>
       </div>
 
       <div class="game">
-        <div class="game-thumb">
+        <a class="game-thumb" href="https://nishivector.github.io/blip-drift/" target="_blank">
           <img src="https://nishivector.github.io/blip-drift/screenshot.png" alt="Blip Drift" />
-        </div>
+        </a>
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Blip Drift</span>
           </div>
           <p class="game-desc">Guide Probe Unit 9 "Blip" home through the asteroid belt — hold left/right to fire tiny thrusters, drift on inertia, and navigate asteroid gravity to reach the signal tower.</p>
-          <div class="game-links">
-            <a class="link-play" href="https://nishivector.github.io/blip-drift/" target="_blank">Play</a>
-            <a class="link-repo" href="https://github.com/nishivector/blip-drift" target="_blank">GitHub ↗</a>
+          <div class="game-links">            <a class="link-repo" href="https://github.com/nishivector/blip-drift" target="_blank">GitHub ↗</a>
           </div>
         </div>
       </div>
