--- a/index.html
+++ b/index.html
@@ -187,6 +187,47 @@
 
 <div class="rounds">
 
+  <!-- ROUND 20 -->
+  <div class="round">
+    <div class="round-label">Round 20 &mdash; Mar 01, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/bop-bubble/screenshot.png" alt="Bop Bubble" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Bop Bubble</span>
+          </div>
+          <p class="game-desc">A soap bubble drifting through a steamy bathroom — nudge into air currents to stay aloft, never touch any surface.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/bop-bubble/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/bop-bubble" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/lena-balloon/screenshot.png" alt="Lena Balloon" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Lena Balloon</span>
+          </div>
+          <p class="game-desc">Hold to rise, release to fall — Lena's hot air balloon can't steer, only change altitude. Read the 5 wind bands and let the sky carry you.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/lena-balloon/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/lena-balloon" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
   <!-- ROUND 19 -->
   <div class="round">
     <div class="round-label">Round 19 &mdash; Mar 01, 2026</div>
