R19 winner: Dusty Roll badge; R20 ready

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Dusty Roll</span>
+            <span class="winner-badge">Winner</span>
           </div>
           <p class="game-desc">Dusty the cheerful tumbleweed can't stop rolling — tap to hop over cacti, hold to tuck under trucks, survive a tornado on the Texas panhandle.</p>
           <div class="game-links">            <a class="link-repo" href="https://github.com/nishivector/dusty-roll" target="_blank">GitHub ↗</a>
